--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -24,16 +24,74 @@
         }
     }
     .wcenter{
+      
+        display: flex;
         box-sizing: border-box;
         width: 40%;
         height: 100%;
         .line{
-            margin-left: -5px;
-            margin-top: 2.6vh;
-            width: 30px;
+            margin-left: -7px;
+            margin-top: 3.5vh;
+            width: 60px;
             height: 1px;
             background-color:  rgb(32,87,246);
             transform: rotateZ(45deg);
         }
+        .line1{
+            margin-right: -7px;
+            margin-top: 3.5vh;
+            width: 60px;
+            height: 1px;
+            background-color:  rgb(32,87,246);
+            transform: rotateZ(-45deg);
+        }
+        .tc{
+            width: 110%;
+            .title{
+                text-align: center;
+                font-weight: 800;
+                font-size: 38px;
+                -webkit-text-fill-color: transparent ;
+                -webkit-background-clip: text ;
+                background-image: -webkit-linear-gradient(top, rgb(255, 255, 255), rgb(69,226,254));
+                &::before{
+                    content: '';
+                    width: 30px;
+                    height: 5px;
+                    display: block;
+                    position: relative;
+                    top: 6.2vh;
+                    border-radius: 10px;
+                    left: -1.5vw;
+                    background: linear-gradient(to right,rgb(0,209,255),rgb(41,106,232));
+                    transform: rotateZ(45deg);
+                }   
+                &::after{
+                        content: '';
+                        width: 30px;
+                        height: 5px;
+                        display: block;
+                        position: relative;
+                        top: -2.8vh;
+                        border-radius: 10px;
+                        left: 33vw;
+                        z-index: 999;
+                        background: linear-gradient(to right,rgb(0,209,255),rgb(41,106,232));
+                        transform: rotateZ(-45deg);
+                }
+            }
+            .line3{
+                outline: none;
+                margin-top: -5px;
+                border: none;
+                border-radius: 120%;
+                width: 120%;
+                margin-left: -10%;
+                height: 3px;
+                background:rgb(17, 74, 248) ;
+                /* box-shadow: 0px 1px 1px rgb(169, 228, 241) ; */
+            }
+        }
+       
     }
 }
