--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -22,6 +22,14 @@
             border-radius: 3px;
             background: linear-gradient(to right,rgb(0,209,255),rgb(41,106,232));
         }
+        #time{
+            font-size: 14px;
+            color: rgb(32,87,246);
+            width: 30px;
+            line-height: 30px;
+            width: 80%;
+            text-align: center;
+        }
     }
     .wcenter{
       
