--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -8,6 +8,16 @@
        width: 50%;
        height: 100%;
        box-sizing: border-box;
-       border: 1px red solid;
+    
+       .l_bottom{
+        box-sizing: border-box;
+        height: 37vh;
+        width: 100%;
+    }
+    .l_top{
+        box-sizing: border-box;
+        height: 55vh;
+    }
    }
+  
 }
