--- a/src/assets/css/map.less
+++ b/src/assets/css/map.less
@@ -1,11 +1,23 @@
-#china{
-    width: 80%;
-    height: 55vh;
-}
+
 #con{
+    box-sizing: border-box;
     width: 100%;
     display: flex;
-}
-.item{
-    width: 20%;
+    #china{
+        width: 80%;
+        height: 55vh;
+    }
+    .items{
+        height: 55vh;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 20%;
+        .item{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
 }
