新增每日活跃人数

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -2,22 +2,31 @@
     display: flex;
     height: 92vh;
     width: 100%;
-    border: 1px black solid;
     box-sizing: border-box;
    .con{
        width: 50%;
        height: 100%;
        box-sizing: border-box;
-    
        .l_bottom{
+        display: flex;
         box-sizing: border-box;
         height: 37vh;
         width: 100%;
+        .box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius:18px ;
+            border: 2px rgb(5, 161, 209) solid;
+            width: 50%;
+            box-sizing: border-box;
+            height: 100%;
+        }
     }
     .l_top{
         box-sizing: border-box;
         height: 55vh;
     }
    }
-  
+    
 }
