--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -4,7 +4,7 @@
     width: 100%;
     height: 8vh;
     .w{
-        margin-top: 1vh;
+       margin-top: 1vh;
         width: 30%;
         height: 0;
         border-bottom: 1px rgb(32,87,246) solid;
@@ -24,7 +24,7 @@
         }
         #time{
             font-size: 14px;
-            color: rgb(32,87,246);
+            color: rgb(5, 183, 253);
             width: 30px;
             line-height: 30px;
             width: 80%;
@@ -32,7 +32,7 @@
         }
     }
     .wcenter{
-      
+       
         display: flex;
         box-sizing: border-box;
         width: 40%;
@@ -80,7 +80,7 @@
                         height: 5px;
                         display: block;
                         position: relative;
-                        top: -2.8vh;
+                        top: -1.5vh;
                         border-radius: 10px;
                         left: 33vw;
                         z-index: 999;
