添加用户满意度

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -4,6 +4,7 @@
     width: 100%;
     box-sizing: border-box;
    .con{
+     
        width: 50%;
        height: 100%;
        box-sizing: border-box;
@@ -18,7 +19,8 @@
             align-items: center;
             border-radius:18px ;
             border: 2px rgb(5, 161, 209) solid;
-            width: 50%;
+            width: 48%;
+            margin-right: 2%;
             box-sizing: border-box;
             height: 100%;
         }
