--- a/src/assets/css/right.less
+++ b/src/assets/css/right.less
@@ -3,11 +3,12 @@
     display: grid;
     width: 100%;
     height: 92vh;
-   
     box-sizing: border-box;
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(3, 33%);
     .box{
+        margin-bottom: 1%;
+        margin-right: 5%;
         position: relative;
         box-sizing: border-box;
         display: flex;
@@ -18,7 +19,7 @@
             font-size: 12px;
             line-height: 20px;
             text-align: center;
-            content: '用户满意度';
+            content: '用户总满意度';
             display: block;
             position: absolute;
             width: 30%;
@@ -29,6 +30,111 @@
             top:0;
             left:0;
             background: linear-gradient(to right,rgba(0,209,255,.2),rgb(41,106,232));
+        }
+    }
+    .box1{
+        margin-bottom: 1%;
+        margin-right: 5%;
+        position: relative;
+        box-sizing: border-box;
+        display: flex;
+        border-radius:20px;
+        border:2px skyblue solid;
+        &::before{
+            color: white;
+            font-size: 12px;
+            line-height: 20px;
+            text-align: center;
+            content: '用户满意度详情';
+            display: block;
+            position: absolute;
+            width: 30%;
+            height: 20px;
+            border-bottom-right-radius: 20px;
+            border-bottom: 2px skyblue solid;
+            border-right: 2px skyblue solid;
+            top:0;
+            left:0;
+            background: linear-gradient(to right,rgba(0,209,255,.2),rgb(41,106,232));
+        }
+    }
+    .box2{
+        
+        overflow: hidden;
+        margin-right: 5%;
+        position: relative;
+        box-sizing: border-box;
+        display: flex;
+        border-radius:20px;
+        border:2px skyblue solid;
+        &::before{
+            color: white; 
+            font-size: 12px;
+            line-height: 20px;
+            text-align: center;
+            content: '每月销售额统计';
+            display: block;
+            position: absolute;
+            width: 30%;
+            height: 20px;
+            border-bottom-right-radius: 20px;
+            border-bottom: 2px skyblue solid;
+            border-right: 2px skyblue solid;
+            top:0;
+            left:0;
+            background: linear-gradient(to right,rgba(0,209,255,.2),rgb(41,106,232));
+        }
+    }
+    .box3{
+        overflow: hidden;
+        margin-right: 5%;
+        position: relative;
+        box-sizing: border-box;
+       
+        padding-top: 20px;
+        border-radius:20px;
+        border:2px skyblue solid;
+        &::before{
+            color: white; 
+            font-size: 12px;
+            line-height: 20px;
+            text-align: center;
+            content: '月度前十加盟商';
+            display: block;
+            position: absolute;
+            width: 35%;
+            height: 20px;
+            border-bottom-right-radius: 20px;
+            border-bottom: 2px skyblue solid;
+            border-right: 2px skyblue solid;
+            top:0;
+            left:0;
+            background: linear-gradient(to right,rgba(0,209,255,.2),rgb(41,106,232));
+        }
+        .heads{
+            width: 100%;
+            height: 10%;
+            display: flex;
+            font-size: 12px;
+            color: white;
+            .head{
+                width: 33%;
+                text-align: center;
+                height: 100%;
+                line-height: 100%;
+            }
+        }
+        .items{
+            width: 100%;
+           height: 8%;
+           display: flex;
+           .item{
+               font-size: 12px;
+               color: white;
+               text-align: center;
+               width: 33%;
+               height: 8%;
+           }
         }
     }
 }
